wrapping issue with add topic button

--- a/src/style/add-topic.css
+++ b/src/style/add-topic.css
@@ -10,9 +10,11 @@
   font-size: 16px;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+  width: 175px;
 }
 
 .add-topic button {
+  padding: 0.5em;
   border: 0;
   background: transparent;
   line-height: 0;
